--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 alarm-thirdparty/kafka_2.13-3.6.2.tgz filter=lfs diff=lfs merge=lfs -text
+alarm-thirdparty/elasticsearch-7.17.5.tar.gz filter=lfs diff=lfs merge=lfs -text
